# election-chat

./: .gitignore  Makefile  README.md  create_mock_data.py  fix_missing.py  fix_missing2.py  ingest_groq_vision.py  pyproject.toml  requirements.txt  startup.py
agent/: chart.py  guardrails.py  sql_agent.py
agentic/: disambiguate.py  session.py
app/: main.py
data/: candidats.csv  circonscriptions.csv  elections.duckdb
evals/: eval_runner.py  fixtures.json
ingestion/: extract.py  load_db.py  normalize.py  pipeline.py
observability/: tracer.py
rag/: indexer.py  retriever.py  router.py
tests/: test_guardrails.py  test_normalize.py
